--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Your App Name Here</title>
+    <title>One-Click Event Publishing!</title>
     <link rel="shortcut icon" href="favicon.svg" />
     <link rel="apple-touch-icon" href="favicon.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="An amazing TeachLA React Website :D" />
-    <!-- TODO: In this file, update title and description!
-    TODO: Update public/favicon.svg and public/favicon512.png
-    Then delete me and only have the root div in index.html -->
+    <meta name="description" content="One-Click Event Publishing!" />
   </head>
 
   <body>
